[gd_scene load_steps=6 format=3 uid="uid://60ely7o5vlny"]

[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/Trait.gd" id="1_70ihd"]
[ext_resource type="PackedScene" uid="uid://cvy61m4lsau1f" path="res://addons/rpg_baker/Editors/Main Screen/TraitClassAssign.tscn" id="1_avlst"]
[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/TraitSelection.gd" id="1_fmdfx"]
[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/LayerListButton.gd" id="3_e55vf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqk4o"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0.937255)

[node name="TraitVBoxContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(500, 22)
offset_right = 500.0
offset_bottom = 84.0
theme_override_constants/separation = 0
script = ExtResource("1_70ihd")

[node name="BasicTrait" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2

[node name="LvlLineEdit" type="LineEdit" parent="BasicTrait"]
layout_mode = 1
offset_right = 67.0625
offset_bottom = 40.0
placeholder_text = "0"
alignment = 1

[node name="TraitSelection" type="Button" parent="BasicTrait"]
layout_mode = 0
offset_left = 74.0
offset_right = 210.0
offset_bottom = 40.0
tooltip_text = "Stuff will be added once stuff like skills and skill types are in the database."
text = "Skill Type"
script = ExtResource("1_fmdfx")
item_list_path = NodePath("../ItemList")

[node name="ItemList" type="ItemList" parent="BasicTrait"]
visible = false
top_level = true
layout_mode = 0
offset_left = 76.0
offset_top = 1.0
offset_right = 257.0
offset_bottom = 187.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pqk4o")
item_count = 6
item_0/text = "Skill Type"
item_1/text = "Learn Skill"
item_2/text = "Modify Stat"
item_3/text = "State Resist"
item_4/text = "Enable Class Override"
item_5/text = "Override Sprite Layer"

[node name="TraitSelection2" type="Button" parent="BasicTrait"]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 285.0
offset_right = 366.0
grow_vertical = 2
text = "Skill Type"
script = ExtResource("1_fmdfx")
item_list_path = NodePath("../ItemList")

[node name="ItemList2" type="ItemList" parent="BasicTrait"]
visible = false
layout_mode = 0
offset_left = 286.0
offset_top = 1.0
offset_right = 467.0
offset_bottom = 187.0
item_count = 6
item_0/text = "Skill Type"
item_1/text = "Learn Skill"
item_2/text = "Modify Stat"
item_3/text = "State Resist"
item_4/text = "Enable Class Override"
item_5/text = "Override Sprite Layer"

[node name="Label" type="Label" parent="BasicTrait"]
layout_mode = 0
offset_left = 307.0
offset_right = 347.0
offset_bottom = 23.0

[node name="DeleteButton" type="Button" parent="BasicTrait"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
text = "X"

[node name="SpriteLayer" type="Button" parent="BasicTrait"]
layout_mode = 0
offset_left = 291.0
offset_top = 7.0
offset_right = 342.0
offset_bottom = 38.0
text = "Layer"
script = ExtResource("3_e55vf")

[node name="LayerList" type="ItemList" parent="BasicTrait/SpriteLayer"]
visible = false
top_level = true
layout_mode = 1
offset_right = 55.0
offset_bottom = 65.0
auto_height = true

[node name="Class" parent="." instance=ExtResource("1_avlst")]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Test"

[connection signal="button_down" from="BasicTrait/TraitSelection" to="BasicTrait/TraitSelection" method="_on_button_down"]
[connection signal="set_trait_value" from="BasicTrait/TraitSelection" to="." method="_set_trait_value"]
[connection signal="item_activated" from="BasicTrait/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="item_activated" from="BasicTrait/ItemList" to="BasicTrait/TraitSelection" method="_on_item_list_item_activated"]
[connection signal="button_down" from="BasicTrait/TraitSelection2" to="BasicTrait/TraitSelection2" method="_on_button_down"]
[connection signal="item_activated" from="BasicTrait/ItemList2" to="BasicTrait/TraitSelection" method="_on_item_list_item_activated"]
[connection signal="button_down" from="BasicTrait/DeleteButton" to="." method="_on_delete_button_button_down"]
[connection signal="button_down" from="BasicTrait/SpriteLayer" to="BasicTrait/SpriteLayer" method="_on_button_down"]
[connection signal="item_activated" from="BasicTrait/SpriteLayer/LayerList" to="." method="_on_layer_list_item_activated"]
[connection signal="item_activated" from="BasicTrait/SpriteLayer/LayerList" to="BasicTrait/SpriteLayer" method="_on_layer_list_item_activated"]
[connection signal="required_state_change" from="Class" to="." method="_on_class_required_state_change"]
